--- a/index.html
+++ b/index.html
@@ -180,9 +180,21 @@ summary {
 </div>
 
 
-<div id="pipet-shiny-server" class="section level1">
-<h1>PIPET Shiny Server</h1>
-<p>Welcome to PIPET Shiny Server</p>
+<div id="pipetapps.com" class="section level1">
+<h1>pipetapps.com</h1>
+<p>Welcome to <a href="http://www.pipetapps.com">pipetapps.com</a></p>
+<ul>
+<li><a href="./pipetecg">PIPET ECG app : CiPA</a></li>
+<li>Therapeutic Drug Management (TDM) app :</li>
+<li>Vancomycin</li>
+<li>Tacrolimus</li>
+<li>Cyclosporin</li>
+<li>MCRM</li>
+<li>Static DDI app</li>
+<li>NCA app</li>
+<li>Bioequivalance app</li>
+<li><a href="./shiny-caffsim">Caffeine PK simulation app</a></li>
+</ul>
 </div>
 
 
